@@ -1,5 +1,8 @@
+Courtney Cavin - Sun Mar 13 2005
+	browser execution now uses absolute path
+
 Djaconil -  Sun Mar 13 2005
-	ported tuchess to iPod
+	ported tuxchess to iPod
 
 Prashant V - Sun Mar 13 2005
 	patched itunesmenu to use new menu system
